--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>barbearia alura</title>
 </head>
 <body>
-    
+    <h1>Barbearia Alura</h1>
+    <p>localizada no coraçao da cidade a Barbearia Alura traz para o mercado o que ha de melhor para seu cabelo e barba fundada em 2019,a Barbearia Alura ja è destaque na cidade e conquista novos clientes a cada dia</p>
+    <p>Nossa missâo è: proporcionar auto-estima e qualidade de vida aos clientes</p>
+    <p>Oferecemos profissionais experientes e antenados às mudanças no mundoda moda. O atendimento possui padrâo de excelência e agilidade, garantindo qualidade e satisfaçâo dos nossos clientes.</p>
 </body>
 </html>
