--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>barbearia alura</title>
-</head>
+<link rel="stylesheet "href="style,css"
+
 <body>
     <h1>Sobre a Barbearia Alura</h1>
     <p>localizada no coraçao da cidade a <strong></strong>Barbearia Alura<strong></strong> traz para o mercado o que ha de melhor para seu cabelo e barba fundada em 2019,a Barbearia Alura ja è destaque na cidade e conquista novos clientes a cada dia</p>
