--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet "href="style,css"
 
 <body>
+    <img src="banner.jpg
     <h1>Sobre a Barbearia Alura</h1>
     <p>localizada no coraçao da cidade a <strong></strong>Barbearia Alura<strong></strong> traz para o mercado o que ha de melhor para seu cabelo e barba fundada em 2019,a Barbearia Alura ja è destaque na cidade e conquista novos clientes a cada dia</p>
     <p>Nossa missâo è: </strong></em>proporcionar auto-estima e qualidade de vida aos clientes </em></strong>
