--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 
 <body>
     <img src="banner.jpg
+    "<div class="principal">
     <h1>Sobre a Barbearia Alura</h1>
     <p>localizada no coraçao da cidade a <strong></strong>Barbearia Alura<strong></strong> traz para o mercado o que ha de melhor para seu cabelo e barba fundada em 2019,a Barbearia Alura ja è destaque na cidade e conquista novos clientes a cada dia</p>
     <p>Nossa missâo è: </strong></em>proporcionar auto-estima e qualidade de vida aos clientes </em></strong>
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundoda moda. O atendimento possui padrâo de excelência e agilidade, garantindo qualidade e satisfaçâo dos nossos clientes.</p>
 </body>
-</html>
+<div class=beneficios">
+<ul>
+<li class="itens">atendimento aos clientes 
+    <li class="itens">espaço diferenciado</li>
+    <li class="itens">localizaçao</li>
+    <li classe="itens">profissionais qualificado</ul>
+</ul>
